--- a/ISA/clock.html
+++ b/ISA/clock.html
@@ -1,79 +1,66 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Digital Clock</title>
-    <style>
-      /* Style the clock element */
-      #clock {
-        font-family: Arial, sans-serif;
-        font-size: 3em;
-        text-align: center;
-        margin-top: 50px;
-        line-height: 1.2em;
-      }
-      
-      /* Style the date element */
-      #date {
-        font-family: Arial, sans-serif;
-        font-size: 1.5em;
-        text-align: center;
-        margin-top: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="clock">
-      <span id="time"></span>
-      <br>
-      <span id="ampm"></span>
-    </div>
-    <div id="date"></div>
-    <script>
-      // Define the function to update the clock
-      function updateClock() {
-        // Get the current time and date
-        var currentTime = new Date();
+<head>
+	<title>Digital Clock</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			font-family: sans-serif;
+			background: #f2f2f2;
+		}
+		.container {
+			width: 100%;
+			height: 100vh;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+		}
+		h1 {
+			font-size: 6rem;
+			margin: 0;
+			color: #4d4d4d;
+		}
+		.time {
+			font-size: 2.5rem;
+			color: #4d4d4d;
+			margin: 0;
+			padding-top: 0.5rem;
+		}
+		.date {
+			font-size: 1.5rem;
+			color: #4d4d4d;
+			margin: 0;
+			padding-top: 0.5rem;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<h1 id="clock"></h1>
+		<p class="time" id="time"></p>
+		<p class="date" id="date"></p>
+	</div>
+	<script>
+		function updateClock() {
+			let now = new Date();
+			let hours = now.getHours();
+			let minutes = now.getMinutes();
+			let seconds = now.getSeconds();
+			let ampm = hours >= 12 ? 'PM' : 'AM';
+			hours = hours % 12;
+			hours = hours ? hours : 12;
+			minutes = minutes < 10 ? '0' + minutes : minutes;
+			seconds = seconds < 10 ? '0' + seconds : seconds;
+			let time = hours + ':' + minutes + ':' + seconds + ' ' + ampm;
+			let date = now.toLocaleDateString('en-US', {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'});
+			document.getElementById('clock').innerHTML = time;
+			document.getElementById('time').innerHTML = 'Time';
+			document.getElementById('date').innerHTML = date;
+		}
 
-        // Extract the hours, minutes, and seconds
-        var hours = currentTime.getHours();
-        var minutes = currentTime.getMinutes();
-        var seconds = currentTime.getSeconds();
-
-        // Convert hours to 12-hour format and determine AM/PM
-        var ampm = hours >= 12 ? 'PM' : 'AM';
-        hours = hours % 12;
-        hours = hours ? hours : 12; // the hour '0' should be '12'
-        
-        // Add leading zeros to minutes and seconds if necessary
-        if (minutes < 10) {
-          minutes = "0" + minutes;
-        }
-        if (seconds < 10) {
-          seconds = "0" + seconds;
-        }
-
-        // Construct the strings for the time and AM/PM
-        var timeString = hours + ":" + minutes + ":" + seconds;
-        var ampmString = ampm;
-
-        // Update the clock elements with the new time and AM/PM
-        document.getElementById("time").innerHTML = timeString;
-        document.getElementById("ampm").innerHTML = ampmString;
-
-        // Extract the day, month, and year
-        var day = currentTime.getDate();
-        var month = currentTime.getMonth() + 1; // Note: January is 0
-        var year = currentTime.getFullYear();
-
-        // Construct the string for the date
-        var dateString = day + "/" + month + "/" + year;
-
-        // Update the date element with the new date
-        document.getElementById("date").innerHTML = dateString;
-      }
-
-      // Call the updateClock function every second
-      setInterval(updateClock, 1000);
-    </script>
-  </body>
+		setInterval(updateClock, 1000);
+	</script>
+</body>
 </html>
